# chip8_emu

./: .gitignore  CMakeLists.txt  README.md
include/: chip8.h
src/: chip8.cpp  main.cpp
